plugins {
    id 'java'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = 'https://repo.runelite.net' }
}

def runeLiteVersion = 'latest.release'
def pluginMainClass = 'com.banknotouch.BankNoTouchPluginTest'

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

    testImplementation 'junit:junit:4.13.2'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.banknotouch'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(11)
}

tasks.register('run', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = pluginMainClass

    jvmArgs '-ea'
    if (System.getProperty('os.name').toLowerCase().contains('mac'))
    {
        jvmArgs '--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED'
    }
    args '--developer-mode', '--debug'
}

tasks.register('shadowJar', Jar) {
    dependsOn configurations.testRuntimeClasspath
    manifest {
        attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from sourceSets.main.output
    from sourceSets.test.output
    from {
        configurations.testRuntimeClasspath.collect { file ->
            file.isDirectory() ? file : zipTree(file)
        }
    }

    exclude 'META-INF/INDEX.LIST'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude '**/module-info.class'

    group = BasePlugin.BUILD_GROUP
    archiveClassifier.set('shadow')
    archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}
